zeit.content.article changes
============================

2.9.2 (unreleased)
------------------

- Articles are created without an addform now. A temporary file is created in
  DAV and automatically checked out. Upon checkin the temporary file is updated
  and renamed to the name given during editing the checked out article (#8080).
- Enable UI for author references (#7441, #7333).


2.9.1 (2010-08-09)
------------------

- Fix tests after product config changes in zeit.cms (#7549).


2.9.0 (2010-06-09)
------------------

- Hide new author_references field.


2.8.3 (2010-06-02)
------------------

- Extract all text content from the body (#7359).


2.8.2 (2010-04-13)
------------------

- Using versions from the ZTK.

- Rezensionsinformationen lassen sich wieder(?) bearbeiten (#7075)


2.8.1 (2010-03-10)
------------------

- Change the way asset interfaces are registered. This fixes isolation problems
  during tests (#6712).

- Fix tests after decentral syndication was disabled by default (#6878).

- Option "meistgelesene Artikel" entfernt (#6878).


2.8.0 (2009-12-18)
------------------

- NoAutomaticMetadataUpdate entfernt.
- Absätze werden wieder korrekt gezählt (#6197).
- Nur Artikel mit der product_id 'ZEDE' haben standardmäßig den Haken 'Export
  zum Tagesspiegel' gesetzt (#6184).


2.7.2 (2009-09-21)
------------------

- Keine Abhängigkeit zu zope.app.twisted mehr.


2.7.1 (2009-09-17)
------------------

- CDS-Pfade für Tag/Montag mit führender Null.


2.7 (2009-09-09)
----------------

- Es wird nur noch genau der veröffentlichte Artikel in die CDS exportiert und
  keine Artikel mehr, die durch Workflowabhängigkeiten veröffentlicht wurden.


2.6.1 (2009-09-05)
------------------

- Tests für Änderungen an zeit.cms angepasst.


2.6 (2009-08-26)
----------------

- Weitere Ersetzungsmöglichkeiten für den CDS-Import-Pfad: `real_year`,
  `real_month`, `real_day`, `ressort` und `sub_ressort`. Dies ermöglicht die
  neue Verzeichnisstuktur (#6045).

