@@ -38,7 +38,7 @@
   <include package="zeit.content.portraitbox.browser" />
 
   <include package="zeit.content.cp" />
-  <include package="zeit.brightcove" />
+  <include package="zeit.content.video" />
   <include package="zeit.solr" />
 
   <include package="zeit.wysiwyg" />
